--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "test-repo",
-  "version": "1.0.0",
-  "description": "test-repo description is here",
+  "name": "testttt-repo",
+  "version": "1.0.1",
+  "description": "testttt-repo description is here",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/kashif750/test-repo.git"
   },
   "keywords": [
-    "kashif-test-repo"
+    "kashif-testttt-repo"
   ],
   "author": "kashi-kashi-kashi",
   "license": "ISC",
